--- a/DrawingBoard/Info.plist
+++ b/DrawingBoard/Info.plist
@@ -7,7 +7,7 @@
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This app requires access to the photo library.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We need access to photo library so that photos can be selected</string>
+	<string>We need access to photo library so that photos can be added.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>UIUserInterfaceStyle</key>
