--- a/DrawingBoard/Info.plist
+++ b/DrawingBoard/Info.plist
@@ -7,9 +7,9 @@
 	<key>NSUserTrackingUsageDescription</key>
 	<string>App would like to access IDFA for tracking purpose</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>This app requires access to the photo library.</string>
+	<string>This app requires access to the photo library, So that we can  save images to your photo gallery.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We need access to photo library so that photos can be added.</string>
+	<string>This app requires access to the photo library, So that we can  save images to your photo gallery.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>UIUserInterfaceStyle</key>
